# RadioPropa

./: .gitignore  .lgtm.yml  .travis.yml  AUTHORS.md  CHANGELOD.MD  CMakeLists.txt  README.md  __init__.py
extra_modules_python/: DiscontinuityLayer.py
include/: RadioPropa.h
include/radiopropa/: Candidate.h  Clock.h  Common.h  Cosmology.h  EmissionMap.h  Geometry.h  Grid.h  GridTools.h  IceModel.h  Logging.h  Module.h  ModuleList.h  ParticleID.h  ParticleMass.h  ParticleState.h  PhotonBackground.h  PhotonPropagation.h  ProgressBar.h  Random.h  Referenced.h  ScalarField.h  Source.h  Units.h  Vector3.h  Version.h
include/radiopropa/advectionField/: AdvectionField.h
include/radiopropa/magneticField/: AMRMagneticField.h  ArchimedeanSpiralField.h  GalacticMagneticField.h  JF12Field.h  MagneticField.h  MagneticFieldGrid.h  PshirkovField.h  QuimbyMagneticField.h
include/radiopropa/magneticLens/: MagneticLens.h  ModelMatrix.h  ParticleMapsContainer.h  Pixelization.h
include/radiopropa/module/: AdiabaticCooling.h  Boundary.h  BreakCondition.h  DiffusionSDE.h  Discontinuity.h  EMCascade.h  EMDoublePairProduction.h  EMInverseComptonScattering.h  EMPairProduction.h  EMTripletPairProduction.h  ElasticScattering.h  ElectronPairProduction.h  HDF5Output.h  NuclearDecay.h  Observer.h  Output.h  OutputCRPropa2.h  OutputROOT.h  ParticleCollector.h  PhotoDisintegration.h  PhotoPionProduction.h  PhotonEleCa.h  PhotonOutput1D.h  PropagationCK.h  Redshift.h  SynchrotronRadiation.h  TextOutput.h
python/: 1_swig.i  2_headers.i  3_repr.i  4_lens.i  radiopropa-builtin.i  radiopropa.i
python/radiopropa/: __init__.py
radio_example/: Gradient.py  Ice_trajectories.py  Prototype_reflection.py  ReflectionRefraction.py  TwoPlanes.py  atmosphere_cloud_sim.py  check_raytracing.py  check_raytracing_numpyoutput.py  icemodel-from-data.ipynb  n2linear.py  plot_n2linear.py  plot_traj.py  radiopropa_test.py  run.py  shadow_zone.py
radiopropa/: .travis.yml  CMakeLists.txt  __init__.py
radiopropa/doc/: Doxyfile  Doxyfile.public
radiopropa/include/: RadioPropa.h
radiopropa/include/radiopropa/: Candidate.h  Clock.h  Common.h  Cosmology.h  EmissionMap.h  Grid.h  GridTools.h  IceModel.h  Module.h  ModuleList.h  ParticleState.h  ProgressBar.h  Random.h  Referenced.h  ScalarField.h  Source.h  Trace.h  Units.h  Variant.h  Vector3.h
radiopropa/include/radiopropa/module/: Boundary.h  BreakCondition.h  DensityPerturbation.h  Discontinuity.h  ElasticScattering.h  HDF5Output.h  HorizontalSurface.h  Observer.h  Output.h  OutputROOT.h  OutputShell.h  ParticleCollector.h  PropagationCK.h  RandomN.h  RandomScattering.h  RestrictToRegion.h  SimplePropagation.h  TextOutput.h  Tools.h
radiopropa/libs/healpix_base/: healpix_base.cc
radiopropa/libs/kiss/include/kiss/: convert.h
radiopropa/libs/zstream-cpp/: izstream.hpp  izstream_impl.hpp  ozstream.hpp  ozstream_impl.hpp
radiopropa/plugin-template/: CMakeLists.txt  findRadioPropa.py  myPlugin.cc  myPlugin.h  myPlugin.i  testPlugin.py
radiopropa/python/: 2_headers.i  radiopropa-builtin.i  radiopropa.i
radiopropa/src/: Candidate.cpp  Clock.cpp  Common.cpp  EmissionMap.cpp  Geometry.cpp  GridTools.cpp  IceModel.cpp  Module.cpp  ModuleList.cpp  ParticleState.cpp  Random.cpp  Source.cpp  Trace.cpp  Variant.cpp  Version.cpp.in
radiopropa/src/module/: BreakCondition.cpp  DensityPerturbation.cpp  Discontinuity.cpp  ElasticScattering.cpp  HDF5Output.cpp  HorizontalSurface.cpp  OutputROOT.cpp  PropagationCK.cpp  RandomN.cpp  RandomScattering.cpp  RestrictToRegion.cpp
radiopropa/test/: testAdiabaticCooling.cpp  testAdvectionField.cpp  testDiscontinuity.cpp  testFunctionalGroups.cpp.in  testMagneticField.cpp  testMagneticLens.cpp  testModuleList.cpp  testPropagation.cpp  testSimulationExecution.py.in  testSource.cpp  testVector3.cpp
src/: Candidate.cpp  Clock.cpp  Common.cpp  Cosmology.cpp  EmissionMap.cpp  GridTools.cpp  IceModel.cpp  ModuleList.cpp  ParticleID.cpp  ParticleMass.cpp  ParticleState.cpp  PhotonBackground.cpp  PhotonPropagation.cpp  ProgressBar.cpp  Random.cpp  ScalarField.cpp  Source.cpp
src/advectionField/: AdvectionField.cpp
src/magneticField/: ArchimedeanSpiralField.cpp  JF12Field.cpp  MagneticField.cpp  MagneticFieldGrid.cpp  PshirkovField.cpp
src/magneticLens/: MagneticLens.cpp  ModelMatrix.cpp  ParticleMapsContainer.cpp  Pixelization.cpp
src/module/: AdiabaticCooling.cpp  Boundary.cpp  BreakCondition.cpp  DiffusionSDE.cpp  Discontinuity.cpp  EMCascade.cpp  EMDoublePairProduction.cpp  EMInverseComptonScattering.cpp  EMPairProduction.cpp  EMTripletPairProduction.cpp  ElasticScattering.cpp  ElectronPairProduction.cpp  HDF5Output.cpp  NuclearDecay.cpp  Observer.cpp  Output.cpp  OutputCRPropa2.cpp  OutputROOT.cpp  OutputShell.cpp  ParticleCollector.cpp  PhotoDisintegration.cpp  PhotoPionProduction.cpp  PhotonEleCa.cpp  PhotonOutput1D.cpp  PropagationCK.cpp  Redshift.cpp  SimplePropagation.cpp  SynchrotronRadiation.cpp  TextOutput.cpp  Tools.cpp
test/: testAdiabaticCooling.cpp  testBreakCondition.cpp  testCore.cpp  testDINT.cpp  testDiffusionSDE.py.in  testFunctionalGroups.cpp.in  testInteraction.cpp  testMagneticLens.cpp  testMagneticLensPythonInterface.py.in  testModuleList.cpp  testOutput.cpp  testPropagation.cpp  testPythonExtension.py.in  testSimulationExecution.py.in  testSource.cpp  testVector3.cpp
